<resources>
    <string name="app_name">RemedioApp</string>

    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="cancelar">Cancelar</string>

    <string name="inserir">Inserir</string>
    <string name="inserirMedicamento">Inserir Medicamentos</string>
    <string name="listar">Listar Medicamentos</string>
    <string name="parear">Conectar bluetooth</string>
    <string name="sincronizar">Sincronizar dados</string>

    <string name="lista">Lista de Medicamentos</string>
    <string name="menu">Menu</string>
    <string name="onoff">ON/OFF</string>
    <string name="caixa">Caixa</string>
    <string name="hora">Hora</string>
    <string name="min">Minuto</string>
    <string name="medico">Médico</string>


    <string name="menuRemedio">Menu do Remédio</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="desativar">Desativar</string>
    <string name="historico">Histórico</string>


</resources>
