<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@drawable/remediobg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menuRemedio"
        android:id="@+id/tvMenuRemedio" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:id="@+id/btEditarRemedio"
        android:textColor="#FFFFFF"
        android:background="#4052b5"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <!--<Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deletar"
        android:id="@+id/btDeletarRemedio"
        android:textColor="#FFFFFF"
        android:background="#4052b5"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />-->

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/desativar"
        android:id="@+id/btDesativarRemedio"
        android:textColor="#FFFFFF"
        android:background="#4052b5"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/historico"
        android:id="@+id/btHistoricoRemedio"
        android:textColor="#FFFFFF"
        android:background="#4052b5"
        android:layout_gravity="center_horizontal" />
</LinearLayout>


