<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@drawable/remediobg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inserir"
        android:id="@+id/tvInserir"
        android:layout_gravity="center_horizontal" />

   <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nome"
    android:id="@+id/tvNome" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caixa"
        android:id="@+id/tvCaixa" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rbuttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp">
        <RadioButton android:id="@+id/rbuttonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A"/>
        <RadioButton android:id="@+id/rbuttonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B"/>
        <RadioButton android:id="@+id/rbuttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C"/>
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:id="@+id/tvHora"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etHora"
        android:inputType="number"
        android:digits="1234567890"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Repetir a cada X hora"
        android:id="@+id/tvFreqHora" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFreqHora"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dias da semana"
        android:id="@+id/tvDiaSemanaInserir" />

    <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
        android:id="@+id/gpDiasDaSemana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/seg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S"/>

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/ter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T"/>

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/qua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Q"/>

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/qui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Q"/>

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S"/>

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/sab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S"/>

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/dom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="D"/>

    </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medico"
        android:id="@+id/tvMedico" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMedico" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/inserir"
        android:id="@+id/btInserir"
        android:layout_gravity="center_horizontal"
        android:background="#c04052b5"
        android:textColor="#FFFFFF" />

</LinearLayout>